--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                     <div class="content">
                         <h3>В целях вовлечения как можно большего количества детей и подростков, молодежи, трудоспособного населения и лиц пожилого возраста в регулярные физкультурно-спортивные занятия, популяризации физической культуры и спорта среди населения, приобщения жителей к здоровому образу жизни и активному отдыху республиканское государственно-общественное объединение «Президентский спортивный клуб» при содействии Ассоциации «Белорусская федерация футбола», Министерства спорта и туризма Республики Беларусь и Министерства образования Республики Беларусь с 1 апреля 2022 года запускает республиканский социальный проект по поддержке спорта и здорового образа жизни «Футбол для всех».</h3>
                         <br>
-                        <img src="http://www.sh1-hoiniki.guo.by/uploads/b1/s/10/149/editor_picture/124/676/orig_IMG_20220413_082853.jpg?t=1649827775">
-                        <img src="http://www.sh1-hoiniki.guo.by/uploads/b1/s/10/149/editor_picture/124/677/orig_IMG_20220413_082835.jpg?t=1649827783">
+                        <img src="img/main/main-news/football-1.jpg">
+                        <img src="img/main/main-news/football-2.jpg">
                     </div>
 
                 </div>
@@ -157,7 +157,7 @@
                     <div class="title">"За безопасность вместе"</div>
 
                     <div class="content">
-                         <img src="http://www.sh1-hoiniki.guo.by/resizer/fit/240/240/s/10/149/image/124/670/medium_zastavka-za-bezopasnost-vmeste-2021-.jpg?t=1649276254" style="width: 300px">
+                         <img src="img/main/main-news/safe-with-us.jpg" style="width: 300px">
                          <h3>С 11 по 27 апреля 2022 года на территории Хойникского района пройдут мероприятия по предупреждению пожаров и гибели людей от них в жилищном фонде в рамках республиканской акции «За безопасность вместе». Помимо МЧС, в ней примут участие службы взаимодействия: МВД, Минздрав, Минтруда и соцзащиты, Минобразования, Мининформ, Минжилкомхоз и Минэнерго.
                         <br>
                              Целью акции является снижение количества пожаров, происходящих по причине несоблюдения гражданами правил пожарной безопасности в жилых зданиях и сооружениях, населенных пунктах и территориях, в т.ч. в сельской местности, повышение информированности населения о возможностях государственных организаций по оказанию услуг в сфере обеспечения пожарной безопасности, укрепление правопорядка, предупреждение правонарушений, совершаемых гражданами в состоянии алкогольного опьянения.</h3></div>
